--- a/packages/renderer/index.html
+++ b/packages/renderer/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta content="script-src 'self' blob:" http-equiv="Content-Security-Policy">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Kindle Companion</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta content="script-src 'self' blob:" http-equiv="Content-Security-Policy">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <title>Kindle Companion</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-<div id="app"></div>
-<script src="./src/main.jsx" type="module"></script>
+    <div id="app"></div>
+    <script src="./src/main.jsx" type="module"></script>
 </body>
+
 </html>
